<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_container"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/anrButton"
            android:background="#FFEB3B"
            android:text="@string/anrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"

            app:layout_constraintTop_toBottomOf="@+id/operationProcess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/operationProcess" app:layout_constraintVertical_bias="0.827"/>
    <ImageView
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@android:drawable/btn_dialog"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="16:9"/>
    <TextView
            android:text="@string/writeText"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="15dp" android:textSize="20sp"/>

    <TextView
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintBottom_toBottomOf="@+id/textView"/>

    <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/inputEmail"
            android:hint="@string/input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline8" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            android:layout_marginStart="2dp"/>
    <EditText
            android:inputType="textPassword"
            android:id="@+id/inputPassword"
            android:hint="@string/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginTop="5dp"/>

    <Button
            android:enabled="false"
            android:id="@+id/loginButton"
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/checkboxAgreement"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/checkboxAgreement" app:layout_constraintHorizontal_bias="0.5"/>
    <CheckBox
            android:id="@+id/checkboxAgreement"
            android:text="@string/accept_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" android:layout_marginTop="15dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/loginButton"
            android:textSize="15sp"/>
    <ProgressBar
            android:id="@+id/operationProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:layout_marginTop="15dp"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline8" app:layout_constraintGuide_begin="15dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline9"
                                                android:orientation="vertical" app:layout_constraintGuide_end="16dp"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier6" app:barrierDirection="top"
                                              app:constraint_referenced_ids="inputEmail,inputPassword"
                                              tools:layout_editor_absoluteY="629dp"/>
    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/group2"
                                            app:constraint_referenced_ids="inputEmail,inputPassword,textView"/>

</androidx.constraintlayout.widget.ConstraintLayout>
